[package]
name = "bevy_prank"
version = "0.8.0"
authors = ["Amirabbas Fazelinia <utilyre@proton.me>"]
edition = "2021"
description = "Opinionated Unreal Engine inspired spectator camera for the Bevy game engine"
repository = "https://github.com/utilyre/bevy_prank"
license-file = "LICENSE"
categories = ["game-development"]
keywords = ["bevy", "plugin", "camera"]

[dependencies.bevy]
version = "^0.11"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_ui",
    "default_font",
]

[dev-dependencies.bevy]
version = "^0.11"
